# xhal

./: .gitignore  Makefile  Makefile_ctp7  README.md  setup.sh
.github/: get_binaries.py  uploads.cfg
doc/: RPCSVC_MANIFEST  doxygen_conf  doxygen_conf~
doc/html/: Exception_8h.html  Exception_8h_source.html  RPCMsg_8h_source.html  XHALInterface_8h.html  XHALInterface_8h_source.html  XHALXMLNode_8h_source.html  XHALXMLParser_8h.html  XHALXMLParser_8h_source.html  annotated.html  classRPCMsg-members.html  classRPCMsg.html  classRPCMsg_1_1BadKeyException-members.html  classRPCMsg_1_1BadKeyException.html  classRPCMsg_1_1BufferTooSmallException.html  classRPCMsg_1_1CorruptMessageException-members.html  classRPCMsg_1_1CorruptMessageException.html  classRPCMsg_1_1Field-members.html  classRPCMsg_1_1Field.html  classRPCMsg_1_1TypeException.html  classRPCSvc-members.html  classRPCSvc.html  classRPCSvc_1_1RPCException-members.html  classRPCSvc_1_1RPCException.html  classes.html  classwisc_1_1RPCMsg-members.html  (+24 more)
etc/: gem_amc_top.xml  gem_amc_top_1.9.2.xml  gem_amc_top_12OH.xml  gem_amc_top_fixed.xml  gem_amc_top_fixedChanNumbering.xml  gem_amc_top_fixedChanNumbering2OH.xml  gem_amc_top_jared_mod_ULTRA.xml  gem_amc_top_test.xml  gem_amc_top_v1_7_0_2xOH_GBT_only.xml  gem_amc_top_v1_9_2_shrinked.xml  gem_amc_v3_1_4_GBT.xml  gem_ctp7_v1_9_3_GBT.xml  optohybrid_registers.xml  temp.xml
python/: Makefile  makeDACtree.py
python/reg_interface_gem/pkg/: installrpm.sh  setup.cfg  setup.py
test/: main_test.cpp
xcompile/: apps.common.mk
xhalarm/: Makefile
xhalcore/: Makefile
(+743 files in other folders)
