[metadata]
name         = xhal
author       = GEM Online Systems Group
author_email = cms-gem-online-sw@cern.ch
summary      = __summary__
license      = MIT
description-file = xhal/README.md
home-page        = https://cms-gem-daq-project.github.io/xhal
project_urls =
    Documentation = https://cms-gem-daq-project.github.io/xhal
    Source Code   = https://github.com/cms-gem-daq-project/xhal
    Bug Tracker   = https://github.com/cms-gem-daq-project/xhal/issues
requires-python = >=2.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Data Acquisition
    Topic :: Scientific
    Topic :: Utilities
    License :: OSI Approved :: MIT
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python [files]

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
namespace_packages =
     xhal


packages =
     'xhal.reg_interface_gem'

data_files =

[entry_points]

[backwards_compat]

[pbr]

[pycodestyle]
exclude=build,lib,.tox,third,*.egg,docs,packages,.eggs

[install]

[bdist_rpm]
requires = python >= 2.6
install_script = installrpm.sh
